--- a/app/index.tmpl.html
+++ b/app/index.tmpl.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Webpack Sample Project</title>
+    <title>222Webpack Sample Project 111</title>
 </head>
 <body>
 <div id='root'>
